fix player label duplicating problem * get old player label and change its textContent * use max-content as playerLabel width to avoid name wrap to multiple lines * set a fix value width for old browsers that do not support 'max-content'

--- a/GUIstyle.css
+++ b/GUIstyle.css
@@ -134,6 +134,8 @@
 	/*overflow: visible;*/
 }
 .playerLabel {
-	width: min-content;
+	width: 13vh; /* for old browser*/
+	text-align: center;
+	width: max-content;
 	background: rgba(250,255,255,0.9);
 }
